Fix layout shift

--- a/frontend/src/presentation/components/SignUpForm/SignUpForm.module.css
+++ b/frontend/src/presentation/components/SignUpForm/SignUpForm.module.css
@@ -7,7 +7,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 16px;
     align-items: center;
     padding: 0 64px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -18,7 +17,6 @@
     width: 100%;
 }
 .formItem {
-    margin-bottom: 0px;
     width: 100%;
 }
 .title {
